--- a/.gcp/workflows/cloudbuild.yaml
+++ b/.gcp/workflows/cloudbuild.yaml
@@ -1,7 +1,7 @@
 
 steps:
   - name: 'gcr.io/$PROJECT_ID/helm'
-    args: ['install', 'strimzi-operator', 'strimzi/strimzi-kafka-operator']
+    args: ['upgrade', 'strimzi-operator', 'strimzi/strimzi-kafka-operator', '--install']
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=gcp-gke-helm-poc'
